web-infras/parser/tests/fixtures/babel/es2015/object/invalid-accessor-generator/output.txt
[SyntaxError]: getter can not be async or generator. (2,10)
2|    get *iterator() { },
 |        ^
[SyntaxError]: setter can not be async or generator. (3,10)
3|    set *iterator(iter) { }
 |        ^
